DevTools: protocol setting files properly handles mimetypes and directories.

BUG=620367

Review-Url: https://codereview.chromium.org/2098703003
Cr-Commit-Position: refs/heads/master@{#403524}

Former-commit-id: 7377ed7748106955dadd95ab254ddd86ae411c16